// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ng-update migrateDocI18nTokens adds signal import from @angular/core when not present: test.ts 1`] = `
{
  "0. Before": "
                import {Component} from '@angular/core';
                import {TUI_DOC_SOURCE_CODE_TEXT} from '@taiga-ui/addon-doc';

                @Component({
                    standalone: true,
                    providers: [
                        {provide: TUI_DOC_SOURCE_CODE_TEXT, useValue: 'GitHub'},
                    ],
                })
                export class TestComponent {}
            ",
  "1. After": "
                import {Component, signal } from '@angular/core';
                import {TUI_DOC_SOURCE_CODE_TEXT} from '@taiga-ui/addon-doc';

                @Component({
                    standalone: true,
                    providers: [
                        {provide: TUI_DOC_SOURCE_CODE_TEXT, useValue: signal('GitHub')},
                    ],
                })
                export class TestComponent {}
            ",
}
`;

exports[`ng-update migrateDocI18nTokens does not add duplicate signal import when signal is already imported: test.ts 1`] = `
{
  "0. Before": "
                import {Component, signal} from '@angular/core';
                import {TUI_DOC_SOURCE_CODE_TEXT} from '@taiga-ui/addon-doc';

                @Component({
                    standalone: true,
                    providers: [
                        {provide: TUI_DOC_SOURCE_CODE_TEXT, useValue: 'GitHub'},
                    ],
                })
                export class TestComponent {}
            ",
  "1. After": "
                import {Component, signal} from '@angular/core';
                import {TUI_DOC_SOURCE_CODE_TEXT} from '@taiga-ui/addon-doc';

                @Component({
                    standalone: true,
                    providers: [
                        {provide: TUI_DOC_SOURCE_CODE_TEXT, useValue: signal('GitHub')},
                    ],
                })
                export class TestComponent {}
            ",
}
`;

exports[`ng-update migrateDocI18nTokens wraps array useValue with signal() for TUI_DOC_DEMO_TEXTS: test.ts 1`] = `
{
  "0. Before": "
                import {Component} from '@angular/core';
                import {TUI_DOC_DEMO_TEXTS} from '@taiga-ui/addon-doc';

                @Component({
                    standalone: true,
                    providers: [
                        {provide: TUI_DOC_DEMO_TEXTS, useValue: ['Night', 'BG', 'Val']},
                    ],
                })
                export class TestComponent {}
            ",
  "1. After": "
                import {Component, signal } from '@angular/core';
                import {TUI_DOC_DEMO_TEXTS} from '@taiga-ui/addon-doc';

                @Component({
                    standalone: true,
                    providers: [
                        {provide: TUI_DOC_DEMO_TEXTS, useValue: signal(['Night', 'BG', 'Val'])},
                    ],
                })
                export class TestComponent {}
            ",
}
`;

exports[`ng-update migrateDocI18nTokens wraps plain string useValue with signal() for TUI_DOC_PREVIEW_TEXT: test.ts 1`] = `
{
  "0. Before": "
                import {Component} from '@angular/core';
                import {TUI_DOC_PREVIEW_TEXT} from '@taiga-ui/addon-doc';

                @Component({
                    standalone: true,
                    providers: [
                        {provide: TUI_DOC_PREVIEW_TEXT, useValue: 'Preview'},
                    ],
                })
                export class TestComponent {}
            ",
  "1. After": "
                import {Component, signal } from '@angular/core';
                import {TUI_DOC_PREVIEW_TEXT} from '@taiga-ui/addon-doc';

                @Component({
                    standalone: true,
                    providers: [
                        {provide: TUI_DOC_PREVIEW_TEXT, useValue: signal('Preview')},
                    ],
                })
                export class TestComponent {}
            ",
}
`;

exports[`ng-update migrateDocI18nTokens wraps plain string useValue with signal() for TUI_DOC_MENU_TEXT: test.ts 1`] = `
{
  "0. Before": "
                import {Component} from '@angular/core';
                import {TUI_DOC_MENU_TEXT} from '@taiga-ui/addon-doc';

                @Component({
                    standalone: true,
                    providers: [
                        {provide: TUI_DOC_MENU_TEXT, useValue: 'Navigation'},
                    ],
                })
                export class TestComponent {}
            ",
  "1. After": "
                import {Component, signal } from '@angular/core';
                import {TUI_DOC_MENU_TEXT} from '@taiga-ui/addon-doc';

                @Component({
                    standalone: true,
                    providers: [
                        {provide: TUI_DOC_MENU_TEXT, useValue: signal('Navigation')},
                    ],
                })
                export class TestComponent {}
            ",
}
`;

exports[`ng-update migrateDocI18nTokens wraps plain string useValue with signal() for TUI_DOC_SEARCH_TEXT: test.ts 1`] = `
{
  "0. Before": "
                import {Component} from '@angular/core';
                import {TUI_DOC_SEARCH_TEXT} from '@taiga-ui/addon-doc';

                @Component({
                    standalone: true,
                    providers: [
                        {provide: TUI_DOC_SEARCH_TEXT, useValue: 'Find...'},
                    ],
                })
                export class TestComponent {}
            ",
  "1. After": "
                import {Component, signal } from '@angular/core';
                import {TUI_DOC_SEARCH_TEXT} from '@taiga-ui/addon-doc';

                @Component({
                    standalone: true,
                    providers: [
                        {provide: TUI_DOC_SEARCH_TEXT, useValue: signal('Find...')},
                    ],
                })
                export class TestComponent {}
            ",
}
`;

exports[`ng-update migrateDocI18nTokens wraps plain string useValue with signal() for TUI_DOC_SEE_ALSO_TEXT: test.ts 1`] = `
{
  "0. Before": "
                import {Component} from '@angular/core';
                import {TUI_DOC_SEE_ALSO_TEXT} from '@taiga-ui/addon-doc';

                @Component({
                    standalone: true,
                    providers: [
                        {provide: TUI_DOC_SEE_ALSO_TEXT, useValue: 'Related'},
                    ],
                })
                export class TestComponent {}
            ",
  "1. After": "
                import {Component, signal } from '@angular/core';
                import {TUI_DOC_SEE_ALSO_TEXT} from '@taiga-ui/addon-doc';

                @Component({
                    standalone: true,
                    providers: [
                        {provide: TUI_DOC_SEE_ALSO_TEXT, useValue: signal('Related')},
                    ],
                })
                export class TestComponent {}
            ",
}
`;

exports[`ng-update migrateDocI18nTokens wraps plain string useValue with signal() for TUI_DOC_SOURCE_CODE_TEXT: test.ts 1`] = `
{
  "0. Before": "
                import {Component} from '@angular/core';
                import {TUI_DOC_SOURCE_CODE_TEXT} from '@taiga-ui/addon-doc';

                @Component({
                    standalone: true,
                    providers: [
                        {provide: TUI_DOC_SOURCE_CODE_TEXT, useValue: 'GitHub'},
                    ],
                })
                export class TestComponent {}
            ",
  "1. After": "
                import {Component, signal } from '@angular/core';
                import {TUI_DOC_SOURCE_CODE_TEXT} from '@taiga-ui/addon-doc';

                @Component({
                    standalone: true,
                    providers: [
                        {provide: TUI_DOC_SOURCE_CODE_TEXT, useValue: signal('GitHub')},
                    ],
                })
                export class TestComponent {}
            ",
}
`;

exports[`ng-update migrateDocI18nTokens wraps plain string useValue with signal() for TUI_DOC_TOC_TEXT: test.ts 1`] = `
{
  "0. Before": "
                import {Component} from '@angular/core';
                import {TUI_DOC_TOC_TEXT} from '@taiga-ui/addon-doc';

                @Component({
                    standalone: true,
                    providers: [
                        {provide: TUI_DOC_TOC_TEXT, useValue: 'Contents'},
                    ],
                })
                export class TestComponent {}
            ",
  "1. After": "
                import {Component, signal } from '@angular/core';
                import {TUI_DOC_TOC_TEXT} from '@taiga-ui/addon-doc';

                @Component({
                    standalone: true,
                    providers: [
                        {provide: TUI_DOC_TOC_TEXT, useValue: signal('Contents')},
                    ],
                })
                export class TestComponent {}
            ",
}
`;
